<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="700dp"
        android:layout_height="420dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/background"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/setting_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_action_navigation_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="80dp">
            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_black"
                android:layout_marginStart="20dp"
                android:text="@string/in_WLAN"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv1"
                android:layout_below="@+id/tv1"
                android:text="@string/in_WLAN_tips" />
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textOn=" "
                android:textOff=" "
                android:switchMinWidth="20dp"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_black"
                android:layout_marginStart="20dp"
                android:text="@string/in_WLAN_update"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tv2"
                android:layout_below="@+id/tv2"
                android:text="@string/in_WLAN_update_tips" />
            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textOn=" "
                android:textOff=" "
                android:switchMinWidth="20dp"
                android:thumb="@drawable/thumb"
                android:track="@drawable/track"/>
        </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_black"
                    android:layout_marginStart="20dp"
                    android:text="@string/update_notice"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/tv3"
                    android:layout_below="@+id/tv3"
                    android:text="@string/notice" />
                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:textOn=" "
                    android:textOff=" "
                    android:switchMinWidth="20dp"
                    android:thumb="@drawable/thumb"
                    android:track="@drawable/track"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@color/withoutColoredBackground"/>

            <RelativeLayout
                android:id="@+id/history_version"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_black"
                    android:layout_marginStart="20dp"
                    android:text="@string/history_version"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/ic_keyboard_24dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stop_service"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_black"
                    android:layout_marginStart="20dp"
                    android:text="@string/stop_service"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/ic_keyboard_24dp"/>
            </RelativeLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>